--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
+    <script src="node_modules/underscore/underscore.js" defer></script>
     <script src="./index.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <style>
-        .no-valid input:invalid{
-            border: 1px solid red;
-        }
+      .no-valid input:invalid {
+        border: 1px solid red;
+      }
     </style>
     <!-- <form action="#" name="login">
         <div><input type="email" placeholder="email" name="email"></div>
@@ -21,7 +22,9 @@
         <button name="send">send</button>
     </form> -->
     <button id="$import">import</button>
-    <br/>
+    <br />
     <button id="$export">export</button>
-</body>
+    <br />
+    <button id="$test">test</button>
+  </body>
 </html>
